# ExTrait

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Main.cpp  README.md  index.html
,github/workflows/: cmake-multi-platform.yml
.github/workflows/: cmake-multi-platform.yml
docs/: Doxyfile
docs/trans/: doxison.xslt  user.xslt  wiki-config.json
docs/transform/: config.json  doxison.xslt  user.xslt
examples/: CMakeLists.txt
examples/type_list/: add.cpp  addIfAbsent.cpp  contains.cpp  deduplicate.cpp  endsWith.cpp  get.cpp  indexOf.cpp  insert.cpp  instantiatesClassTemplate.cpp  instantiatesSameClassTemplate.cpp  isEmpty.cpp  isEmptyInstantiated.cpp  join.cpp  lastIndexOf.cpp  length.cpp  map.cpp  match.cpp  move.cpp  remove.cpp  removeAll.cpp  removeAt.cpp  removeIf.cpp  removeRange.cpp  replace.cpp  replaceAll.cpp  replaceAt.cpp  replaceIf.cpp  replaceRange.cpp  reverse.cpp  rotate.cpp  sameTemplateArguments.cpp  sort.cpp  startsWith.cpp  sublist.cpp  swap.cpp
include/extrait/: common.h  define.h  reflection.h  stringable.h  type_container.h  type_list.h
include/extrait/detail/: common_impl.h  reflection_impl.h  stringable_impl.h  type_container_impl.h  type_list_impl.h
test/: CMakeLists.txt  Common.cpp  Reflection.cpp  Stringable.cpp  TypeList.cpp
